<resources>
    <string name="app_name">CoderSwag</string>
    <string name="category">Category</string>
    <string name="categoryimage">categoryImage</string>
    <string name="hats">HATS</string>
    <string name="products">Products</string>
    <string name="productimage">productImage</string>
    <string name="product_name">Hat Devslopes Red</string>
    <string name="product_price">$18.00</string>
    <string name="description">Description: Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur. Nullam id dolor id nibh ultricies vehicula ut id elit.</string>
    <string name="btn">Add to cart!</string>
</resources>
